# optforge-old

./: .gitattributes  .gitignore  README.md  pyproject.toml  todos.txt
docs/: Installation.rst  conf.py  index.rst
docs/_autosummary/: optforge.benchmark.benchmark.rst  optforge.benchmark.maze.rst  optforge.benchmark.rst  optforge.benchmark.vobench_benchmarks.rst  optforge.benchmark.workflows.rst  optforge.domains.rst  optforge.exceptions.rst  optforge.history.rst  optforge.inits.rst  optforge.integrations.nevergrad.nevergrad_optimizer.rst  optforge.integrations.nevergrad.rst  optforge.integrations.optuna.optuna_optimizer.rst  optforge.integrations.optuna.rst  optforge.integrations.opytimizer.opytimizer_optimizer.rst  optforge.integrations.opytimizer.rst  optforge.integrations.pypop7.pypop7_optimizer.rst  optforge.integrations.pypop7.rst  optforge.integrations.rst  optforge.integrations.scipy.rst  optforge.integrations.scipy.scipy_optimizer.rst  optforge.integrations.torch.rst  optforge.integrations.torch.torch_optimizer.rst  optforge.interfaces.minimize.rst  optforge.interfaces.rst  optforge.optim.baseline.rst  optforge.optim.debug.rst  optforge.optim.fdsa.rst  optforge.optim.optimizer.rst  optforge.optim.random_search.rst  optforge.optim.rst  optforge.optim.spsa.rst  optforge.param.rst  optforge.paramdict.rst  optforge.pareto.rst  optforge.plt_tools.rst  optforge.progress.rst  optforge.python_tools.rst  optforge.rst  (+2 more)
tests/: conftest.py  param testing.ipynb  test_param_continuous.py  test_param_discrete.py  test_param_onehot.py  test_param_transit.py
(+170 files in other folders)
