[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optforge0"
description = "Black-box optimization toolkit."

version = "2024.08.23"
dependencies = [
  "numpy",
]
requires-python = ">= 3.9"
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["optimization", "optimizers", "benchmark", "blackbox", "black box", "visualization", "hyperparameter"]


[project.urls]
Homepage = "https://github.com/inikishev/optforge"
Repository = "https://github.com/inikishev/optforge"
Issues = "https://github.com/inikishev/optforge/isses"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
